# rustle

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile.ubi  Dockerfile  README.md  SECURITY.md  Trunk.toml  docker-compose.yml  flake.nix  index.html  package.json  result  rustle.xml  tailwind.config.js
.github/workflows/: ci.yml  docker-publish.yml
.husky/: pre-commit
backend/: Cargo.toml
backend/src/: config.rs  cookie_auth.rs  login.html  main.rs  session_id.rs
backend/src/auth/: crypto.rs  handlers.rs  lockout.rs  middleware.rs  mod.rs
backend/src/routes/: mod.rs
backend/src/utils/: mod.rs
backend/tests/: container_smoke.rs
docker/: Dockerfile
docker/etc/nginx/: nginx.conf
docker/etc/nginx/conf.d/: default.conf
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app_effects.rs  app_state.rs  index.css  tailwind.css
frontend/src/app/: callbacks.rs  enter.rs  init.rs  mod.rs
frontend/src/components/: alerts.rs  app_modals.rs  grid.rs  keyboard.rs  mod.rs  modal_date_picker.rs  modal_info.rs  modal_migrate.rs  weather_engine.rs
frontend/src/components/weather_engine/: mod.rs  types.rs
frontend/src/constants/: config.rs
frontend/src/helpers/: browser.rs  encryption.rs  holidays.rs  share.rs  stats.rs  tests.rs
frontend/src/i18n/: mod.rs  zh.rs
public/: manifest.json
src/: app.rs  app_effects.rs  app_state.rs  constants.rs  index.css  main.rs  tailwind.css
src/app/: enter.rs  mod.rs
src/components/: alerts.rs  app_modals.rs  grid.rs  keyboard.rs  mod.rs  modal_base.rs  modal_date_picker.rs  modal_info.rs  modal_migrate.rs  modal_settings.rs  modal_stats.rs  navbar.rs  stat_bar.rs  stat_histogram.rs  weather.rs  weather_engine.rs
src/constants/: config.rs  valid_guesses.txt  word_db.rs  wordlist.txt
src/helpers/: browser.rs  encryption.rs  holidays.rs  local_storage.rs  mod.rs  share.rs  stats.rs  statuses.rs  tests.rs  words.rs
