[package]
name = "rustle"
version = "0.1.9"
edition = "2021"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/UberMetroid/rustle"
homepage = "https://github.com/UberMetroid/rustle"
description = "An optimized, responsive, and secure clone of the popular Wordle game built using Rust, Yew, and WebAssembly, served by a native Axum backend."
readme = "README.md"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.3"
gloo-timers = "0.3"
gloo-utils = "0.2"
gloo-events = "0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
blowfish = "0.9"
byteorder = "1.5"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"


[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "DomTokenList",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "Storage",
  "Navigator",
  "Clipboard",
  "Location",
  "MediaQueryList",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "History",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
dotenvy = "0.15"
