[package]
name = "backend"
version = "0.1.28"
edition = "2021"
authors = ["UberMetroid <admin@ubermetroid.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/UberMetroid/rustle"
homepage = "https://github.com/UberMetroid/rustle"
description = "Axum backend service for Rustle."
readme = "../README.md"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
dotenvy = "0.15"
sha2 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
