[package]
name = "backend"
version = "1.0.18"
edition = "2024"
authors = ["studio2201"]
license = "GPL-3.0-or-later"
repository = "https://github.com/studio2201/rustle"
homepage = "https://github.com/studio2201/rustle"
description = "Axum backend service for Rustle."
readme = "../README.md"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "sh"
path = "src/bin/sh.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["fs"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
constant_time_eq = "0.5"
rand = { version = "0.10", features = ["std", "thread_rng"] }
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
