[package]
name = "rustle-frontend"
version = "1.0.18"
edition = "2024"
authors = ["studio2201"]
license = "GPL-3.0-or-later"
repository = "https://github.com/studio2201/rustle"
homepage = "https://github.com/studio2201/rustle"
description = "Yew frontend application for Rustle."
readme = "../README.md"

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "=0.2.121"
wasm-bindgen-futures = "=0.4.71"
js-sys = "=0.3.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-storage = "0.4"
gloo-timers = "0.4"
gloo-utils = "0.3"
gloo-events = "0.3"
gloo-net = "0.7"
shared-frontend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.29" }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
blowfish = "0.10"
byteorder = "1.5"
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "=0.3.98"
features = [
  "Window",
  "Document",
  "Element",
  "Node",
  "DomTokenList",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlButtonElement",
  "HtmlTextAreaElement",
  "Storage",
  "Navigator",
  "Clipboard",
  "Location",
  "MediaQueryList",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "DomRect",
  "Event",
  "MouseEvent",
  "KeyboardEvent",
  "History",
  "HtmlSelectElement",
]
